# awesome-fxd

./: CMakeLists.txt  README.md
config_backend/: CMakeLists.txt
config_backend/inc/: configuration_backend.h  fx_chain_configuration.h  global_settings.h
config_backend/src/: configuration_backend.cc  configuration_backend_impl.cc  configuration_backend_impl.h
effects/: CMakeLists.txt
effects/src/: chorus.cc  fx1.cc  fx2.cc  panner.cc  passthrough.cc  pitchshifter.cc  reverb1.cc  reverb2.cc  simple_delay.cc  simple_dist.cc  simple_eq.cc  sine_osc.cc  svf.cc  wavefolder.cc  white_noise.cc
engine/: CMakeLists.txt
engine/inc/: controller.h  fx_plugin_handler.h  jack_client.h
engine/src/: controller.cc  controller.h  fx_plugin_handler.cc  jack_client.cc  main.cc
inc/: audio_processor.h  fx_plugin.h
sample_configs/: delay.json  dist.json
src/: main.cc
